--- a/assets/styling/pages/_product.scss
+++ b/assets/styling/pages/_product.scss
@@ -125,8 +125,7 @@
 
 
 .portfolio-description {
-  color: #ccc;
-  font-size: 14px;
+  color: #f34747;
   font-style: italic;
   line-height: 19px;
 }
@@ -157,7 +156,7 @@
 .portfolio-icon {
   display: block;
   color: #fff;
-  cursor: pointer;
+  cursor: copy;
   background-color: rgba(0, 0, 0, 0.4);
   border-radius: 30px;
   font-size: 17px;
